<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="match_parent"
        android:layout_height="561dp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="561dp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:layout_gravity="center"
        android:rowCount="2"
        android:columnCount="3">

        <Button
            android:id="@+id/button1"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_camera_eng" />
        <Button
            android:id="@+id/button3"
            style="@style/Widget.Material3.Button.TextButton.Icon"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sql" />
        <Button
            android:id="@+id/button2"
            style="@style/Widget.Material3.Button.TextButton.Icon"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_camera_eng" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.Material3.Button.TextButton.Icon"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_eng" />
        <Button
            android:id="@+id/button4"
            style="@style/Widget.Material3.Button.TextButton.Icon"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sql_del" />
        <Button
            android:id="@+id/button5"
            style="@style/Widget.Material3.Button.TextButton.Icon"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_eng" />

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="546dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labels_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labels_eng"
            android:textSize="34sp"
            android:visibility="invisible" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/labels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labels"
                android:textSize="24sp"
                android:visibility="invisible" />
        </ScrollView>

    </LinearLayout>

</RelativeLayout>